# AudioMetadataClassifier

./: .gitignore  Dockerfile  README.md  main.py  openapi.json  output_metadata.json  pyproject.toml
src/: main.py
src/api/: endpoints.py
src/audiometadataclassifier/: main.py
src/audiometadataclassifier/api/: endpoints.py
src/audiometadataclassifier/models/: schema.py
src/audiometadataclassifier/scripts/: start.py
src/audiometadataclassifier/utils/: audio_processing.py
src/services/: transcriber.py  transcription_service.py  vad.py
src/utils/: audio_processing.py  audio_utils
test_audio_files/: Example_response.json
